--- a/horror-game/index.html
+++ b/horror-game/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>horror Game</title>
+    <title>Horror Game of the year</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h3>the <span>horror game</span> of the year</h3>
-    <h1>ENDLESS NIGHTMARE</h1>
+    <h1>
+      ENDLESS <br />
+      NIGHTMARE
+    </h1>
     <p>You need to find the way out or your night will never end!</p>
 
     <a href="#">READ MORE</a>
