--- a/healthy-recipes/index.html
+++ b/healthy-recipes/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Inter&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Beth+Ellen&family=Spectral:wght@500;600&display=swap"
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Travel Expert</title>
+    <title>Healthy Recipes</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>YOUR <span>TRAVEL</span> EXPERT</h1>
-    <p>Start exploring the best places in the entire world!</p>
-    <a href="#">READ MORE</a>
-    <a href="#" class="btn-color">TRAVEL NOW</a>
+    <h1>Eating <span>for living</span></h1>
+    <p>Your long life start with your intelligent choices</p>
+
+    <a href="#">Learn More</a>
+    <a href="#" class="btn-recipes">Recipes</a>
   </body>
 </html>
