--- a/travel-expert/index.html
+++ b/travel-expert/index.html
@@ -16,7 +16,10 @@
   <body>
     <h1>YOUR <span>TRAVEL</span> EXPERT</h1>
     <p>Start exploring the best places in the entire world!</p>
-    <a href="#">READ MORE</a>
-    <a href="#" class="btn-color">TRAVEL NOW</a>
+
+    <div>
+      <a href="#">READ MORE</a>
+      <a href="#" class="btn-color">TRAVEL NOW</a>
+    </div>
   </body>
 </html>
