--- a/healthy-recipes/index.html
+++ b/healthy-recipes/index.html
@@ -17,7 +17,9 @@
     <h1>Eating <span>for living</span></h1>
     <p>Your long life start with your intelligent choices</p>
 
-    <a href="#">Learn More</a>
-    <a href="#" class="btn-recipes">Recipes</a>
+    <div>
+      <a href="#">Learn More</a>
+      <a href="#" class="btn-recipes">Recipes</a>
+    </div>
   </body>
 </html>
